--- a/src/app/components/candidato/candidato.component.html
+++ b/src/app/components/candidato/candidato.component.html
@@ -1,4 +1,8 @@
-<div>
-    <img class="" [src]="candidato?.foto">
-    <label class="my-block" for="">{{candidato?.nome}}</label>
+<div class="candidato" (click)="selecionouCandidato()">
+    <div class="">
+        <h3>{{ candidato?.nome }}</h3>
+    </div>
+    <div class="">
+        <img class="" [src]="candidato?.foto">
+    </div>
 </div>
