--- a/src/app/components/candidato/candidato.component.html
+++ b/src/app/components/candidato/candidato.component.html
@@ -3,6 +3,6 @@
         <h3>{{ candidato?.nome }}</h3>
     </div>
     <div class="">
-        <img class="" [src]="candidato?.foto">
+        <img class="img-thumbnail img-responsive" [src]="candidato?.foto">
     </div>
 </div>
