--- a/src/app/components/confirmacao/confirmacao.component.html
+++ b/src/app/components/confirmacao/confirmacao.component.html
@@ -1,5 +1,5 @@
+<comp-candidato [candidato]="candidato"></comp-candidato>
 <div class="btn-group-vertical">
-    <button class="btn btn-warning grande" (click)="cancelar()">Cancela</button>
-    <comp-candidato [candidato]="candidato"></comp-candidato>
-    <button class="btn btn-success grande" (click)="confirmar()">Confirma</button>
+    <button class="btn btn-warning btn-lg grande" (click)="cancelar()">Cancela</button>
+    <button class="btn btn-success btn-lg grande" (click)="confirmar()">Confirma</button>
 </div>
