--- a/src/app/views/inicio/inicio.component.html
+++ b/src/app/views/inicio/inicio.component.html
@@ -1,2 +1,6 @@
-<h4>Membro: {{ getEleitor() }}</h4>
-<comp-cedula></comp-cedula>
+<div class="container">
+    <h2>{{titulo}}</h2>
+    <h4>Local: {{local}}</h4>
+    <h4>Membro: {{ getEleitor() }}</h4>
+    <comp-cedula></comp-cedula>
+</div>
