--- a/src/app/components/candidato/candidato.component.html
+++ b/src/app/components/candidato/candidato.component.html
@@ -1,4 +1,4 @@
-<div class="candidato" (click)="selecionouCandidato()">
+<div class="caixa-candidato" (click)="selecionouCandidato()">
     <div class="">
         <h3>{{ candidato?.nome }}</h3>
     </div>
