--- a/src/app/views/inicio/inicio.component.html
+++ b/src/app/views/inicio/inicio.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="jumbotron container">
     <h2>{{titulo}}</h2>
     <h4>Local: {{local}}</h4>
     <h4>Membro: {{ getEleitor() }}</h4>
