--- a/src/app/components/confirmacao/confirmacao.component.css
+++ b/src/app/components/confirmacao/confirmacao.component.css
@@ -1,8 +1,8 @@
 button.grande {
     display: inline-block;
     width: 240px;
-    height: 100px;
-    margin: 10px;
+    /* height: 100px; */
+    /* margin: 10px; */
     /* margin-left: 10px; */
     /* padding: 10px; */
     font-size: 2em;
